--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -20,7 +20,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="15dp"
                 >
             <TextView
                 android:id="@+id/email_title"
@@ -244,7 +243,45 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/deregistraion_layout"
+    android:id="@+id/deregistraion_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="15dp">
+
+        <TextView
+            android:id="@+id/deregistraion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/normal_font"
+            android:text="Deregistration"
+            android:textColor="@color/login_form_details_dark"
+            android:textSize="18dp" />
+        <View
+            android:id="@+id/bottom_line7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/login_form_details_gray"
+            android:layout_marginTop="15dp"
+            />
+
+
+        </LinearLayout>
+
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sensorlist_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
@@ -258,15 +295,15 @@
             android:layout_marginTop="15dp">
 
             <TextView
-                android:id="@+id/deregistraion"
+                android:id="@+id/sensorlist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/normal_font"
-                android:text="Deregistration"
+                android:text="Sensor List"
                 android:textColor="@color/login_form_details_dark"
                 android:textSize="18dp" />
             <View
-                android:id="@+id/bottom_line7"
+                android:id="@+id/bottom_line8"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/login_form_details_gray"
@@ -275,6 +312,9 @@
 
 
         </LinearLayout>
+
+
+
 
     </LinearLayout>
 
