--- a/app/src/main/res/layout/activity_air_history.xml
+++ b/app/src/main/res/layout/activity_air_history.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/layout_block_border"
     >
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.4">
@@ -18,25 +18,25 @@
             android:id="@+id/endCal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="60dp"
+            android:layout_marginLeft="120dp"
+            android:layout_below="@+id/endTitle"
+            android:layout_toRightOf="@+id/startTitle"
             app:srcCompat="@drawable/calendar" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/endTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginLeft="60dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/normal_font"
             android:text="End"
+            android:layout_toRightOf="@id/startTitle"
             android:textColor="@color/login_form_details_dark"
-            app:layout_constraintStart_toEndOf="@+id/endCal"
-            app:layout_constraintTop_toTopOf="parent" />
+
+          />
 
         <TextView
             android:id="@+id/endDate"
@@ -44,10 +44,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/normal_font"
             android:textColor="@color/login_form_details_dark"
-            app:layout_constraintStart_toEndOf="@+id/endCal"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            android:layout_below="@+id/endTitle"
+            android:layout_toRightOf="@id/endCal"
+            />
 
         <ImageView
             android:id="@+id/startCal"
@@ -55,23 +57,19 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_below="@id/startTitle"
             app:srcCompat="@drawable/calendar" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/startTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginLeft="18dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/normal_font"
             android:text="Start"
-            android:textColor="@color/login_form_details_dark"
-            app:layout_constraintStart_toEndOf="@+id/startCal"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textColor="@color/login_form_details_dark" />
 
         <TextView
             android:id="@+id/startDate"
@@ -79,10 +77,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/normal_font"
             android:textColor="@color/login_form_details_dark"
-            app:layout_constraintStart_toEndOf="@+id/startCal"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            android:layout_below="@+id/startTitle"
+            android:layout_toRightOf="@id/startCal"
+            />
 
         <Button
             android:id="@+id/show_btn"
@@ -90,16 +90,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/air_history_show_btn"
             android:fontFamily="@font/normal_font"
             android:text="Show"
             android:textColor="@color/login_form_details"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/endDate"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_alignParentEnd="true" />
 
-    </android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
 
 
     <LinearLayout
